fix multiselect line-heights and align

--- a/udata_front/theme/gouvfr/assets/less/components/multiselect.less
+++ b/udata_front/theme/gouvfr/assets/less/components/multiselect.less
@@ -43,6 +43,7 @@
         }
         .select-a11y-suggestion {
             .fr-p-1w;
+            align-items: start;
             &:hover, &:focus {
                 background: @grey-100;
             }
@@ -60,9 +61,12 @@
             margin-top: 0.25rem;
             font-size: 0.75rem;
             color: @grey-400;
+            line-height: 1.3rem;
         }
         .select-a11y-suggestion__helper {
+            margin-top: 0.25rem;
             font-size: 0.875rem;
+            line-height: 1.5rem;
         }
         .select-a11y-suggestion__image {
             .logo;
@@ -71,6 +75,7 @@
         .select-a11y-suggestion__label {
             font-size: 0.875rem;
             color: @grey-400;
+            line-height: 1.5rem;
         }
         .select-a11y__selected-list {
             padding: 0.1rem 2.5rem calc(0.1rem + 2px) 1rem;
